--- a/ext/rtmp/README
+++ b/ext/rtmp/README
@@ -1,6 +1,6 @@
-rtmpsrc:
+rtmpsrc/sink:
 
-This plugin requires librtmp from http://rtmpdump.mplayerhq.hu/
+These plugins require librtmp from http://rtmpdump.mplayerhq.hu/
 
 You have to build librtmp with -fPIC to be able to use it
 with the GStreamer plugin: make XCFLAGS="-fPIC"
